Mon Mar 08 21:43:19 1999  George Lebl  <jirka@5z.com>

	* gnome-icon-list.c: in SINGLE mode, don't unselect on
	  GDK_[23]BUTTON_PRESS, to allow the app to get double/tripple
	  clicks in SINGLE mode

	* gnome-icon-entry.c: fixed a leak in setting the icon, and added
	  dragging, so that we may drag the icon from the preview button

	* gnome-pixmap-entry.c: added way to drag the image from the
	  preview frame

	* gnome-icon-sel.c: (gnome_icon_selection_show_icons) just quit
	  if file_list is NULL, we might just have come to an empty
	  directory

1999-03-07  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-color-picker.c (render): added a check if cp is realized,
	since otherwise da->style->bg_gc[*]==NULL caused a segfault in
	background capplet. it seems to work allright now.

1999-03-06  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-canvas-util.c: Added documentation for the functions that
	were missing it.

1999-03-04  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-canvas-util.h (gnome_canvas_points_unref): 
	Fix typo -- rename from `gnome_canvas_point_unref'.

1999-02-28  Martin Baulig  <martin@home-of-linux.org>

	* gnome-property-entries.c (_property_entry_font_entry_cb):
	Send the changed signal to `cb_data->object->user_data' not
	to `cb_data->object'.

1999-02-27  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-canvas-util.c (gnome_canvas_points_free): Add ref/unref

1999-02-26  Sergey Panov <sipan@mit.edu>

        * gnome-canvas-text.c(gnome_canvas_text_set_arg): removed
        g_assert that was left there by mistake.

Fri Feb 26 15:39:58 1999  George Lebl  <jirka@5z.com>

	* gnome-icon-entry.c: fix problem with chooser dialog when the
	  directory stopped existing, it will go into the default directory
	  now

1999-02-27  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>

	* gtkrc.ja, gtkrc.ko: Removed default style, as gtk+ already has
	the default gtkrc's.

1999-02-26  Sergey Panov <sipan@mit.edu>
